[package]
name = "codechain-fml"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
crossbeam = "0.7.3"
codechain-basesandbox = { path = "/home/junha/Projects/foundry-reference/basesandbox" }
rand = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
linkme = "0.2.1"
once_cell = "1.3.1"
intertrait = "0.2.0"
parking_lot = "0.10.2"

[dev-dependencies]
fml-macro = { path = "../fml/macro" }
intertrait = "0.2.0"
linkme = "0.2.1"

[features]
default = []
single_process = []
